# loans-analytics

./: .bandit  .bandit.yaml  .bandit.yml  .codeclimate.yml  .codeqlignore  .coderabbit.yaml  .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.local  .env.local.INSTRUCTIONS  .eslintignore  .eslintrc.json  .flake8  .funcignore  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.yml  .markdownlintignore  .mypy_full.out  .npmrc  .pre-commit-config.yaml  .pylintrc  .repo-structure.json  .rgignore  .sourcery.yaml  .vercelignore  .yamllint  .yamllint.yaml  =2.0.0  AGENTS.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_UNIFIED.md  (+300 more)
.github/: CODEOWNERS  CONTRIBUTING.md  codeql-config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.lint-venv/: pyvenv.cfg
.rollback/: pipeline_backup_20251226_015848.yml  pipeline_backup_20251229_165718.yml
.scannerwork/: report-task.txt
.sonarlint/: connectedMode.json
.trunk/: actions 2  logs 2  notifications 2  out 2  tools 2  trunk.yaml
.venv-1/: pyvenv.cfg
.vercel/: project.json
abaco_runtime/: standalone_ai.py  standalone_ai_engine.py
agents/: __init__.py  base_agent.py  gen_ai_kpi.py  kpi_calculator.py  language_model_provider.py  llm_provider.py  react_agent.py
apps/: README.md  __init__.py  coverage-python.xml  growth_dashboard.py  investor_dashboard.py
archive_legacy/: README.md  generate_sample_data.py
artifacts/: full-suite-report.json
audit_artifacts/: critical_findings.csv  duplicate_shadow_map.csv  forensic_audit_report.md  formula_inventory.csv  reviewed_file_manifest.csv
backend/: __init__.py  requirements.txt
ci/: CI_FIXES.md  README_meta.md
ci-workflow/: CI_Workflow_Failure_Handling_checklist.md  CI_Workflow_Failure_Handling_test_plan.md  CI_Workflow_Failure_Handling_testcases.md
config/: CONFIG_STRATEGY.md  README.md  alertmanager.yml  alertmanager.yml.template  business_parameters.yml  business_rules.yaml  cost_baselines.yml  data_source_schemas.yml  evaluation-thresholds.yml  holding_projections.yml  kpi_definitions.yaml  kpi_definitions.yml  kpi_schema_v2.json  kpis.yml  otel-collector.yml  personas.yml  pii_fields.yaml  pipeline.yml  prometheus.yml  roles_and_outputs.yaml  sample_codex_mcp_config.toml  unified.yml
constraints/: opentelemetry-constraints.txt
dashboard/: tracing_setup.py
data/: README.md  abaco_portfolio_calculations.csv  abaco_portfolio_calculations_fixed.csv  evaluation_report.json  queries.csv  responses.json
data-processor/: processor.py
data_samples/: abaco_portfolio_sample.csv  sample_loans.csv
demo/: package.json
demo_bak_2025-12-26/: pnpm-lock.yaml
docs/: .markdownlint-disabled.md  ACCEPTANCE_CRITERIA.md  ALERTMANAGER_NOTIFICATIONS_SETUP.md  API_BASED_KPI_CONSUMPTION.md  API_SECURITY_GUIDE.md  ARCHITECTURAL_REMEDIATION.md  AUDIT_LINEAGE.md  AUDIT_REMEDIATION_CLOSURE.md  AUDIT_REPORT 2.md  AUDIT_REPORT.md  AUDIT_REPORT_2026.md  AUTHENTICATION_SETUP_GUIDE.md  AVAILABLE_TOOLS_AND_WORKFLOW_CONFIGURATION.md  AZURE_SETUP.md  Analytics-Vision.md  (+189 more)
n8n/: .env  (+5 more)
(+9327 files in other folders)
