[project]
name = "loans-loans-analytics"
version = "1.3.0"
description = "Production lending analytics platform with multi-agent KPI engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.pylint.messages_control]
disable = [
  "C0103",
  "C0104",
  "C0114",
  "C0115",
  "C0116",
  "C0206",
  "C0413",
  "C1803",
  "C0121",
  "E0401",
  "E0611",
  "E1101",
  "E1102",
  "R0402",
  "R0801",
  "R0902",
  "R0903",
  "R0912",
  "R0913",
  "R0914",
  "R0915",
  "R1732",
  "W0104",
  "W0212",
  "W0612",
  "W0613",
  "W0621",
  "W1404",
  "W1514",
  "C0301",
  "C0303",
  "C0415",
  "W0611",
  "W1203",
  "W1309",
  "R0917", # too-many-positional-arguments (new in pylint 3)
]

[tool.pylint.master]
ignore-patterns = [
  ".coveragerc",
  "*.ini",
  "*.cfg",
  "*.txt",
  "*.md",
  "*.yml",
  "*.yaml",
  "*.json",
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.lint_venv
  | node_modules
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".lint_venv", "node_modules", "build", "dist"]

[tool.flake8]
extend-exclude = [".coveragerc", "*.ini", "*.cfg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "stats: advanced statistical tests (optional)",
  "integration_supabase: Supabase-backed historical KPI integration tests",
  "integration: integration tests requiring external services (opt-in)",
  "e2e: end-to-end tests requiring live backend/frontend services (opt-in)",
  "asyncio: marks tests as async (used with pytest-asyncio)",
  "timeout: tests with timeout constraints",
]
filterwarnings = [
  "ignore:KPIEngine \\(v1\\) is deprecated.*:DeprecationWarning",
  "ignore:pkg_resources is deprecated.*:DeprecationWarning",
]
# Prevent LLM agent tests from running without explicit opt-in.
# Multi-agent tests are excluded by default from standard CI runs — they require:
#   - External LLM API keys (OPENAI_API_KEY, ANTHROPIC_API_KEY, etc.)
#   - Explicit @pytest.mark.integration or equivalent user annotation
#   - Controlled CI matrix that prevents silent API calls
# To run agent tests: pytest --co -m integration tests/
testpaths = [
  "backend/python/tests",
  "tests",
]
norecursedirs = [
  ".git",
  ".venv",
  "__pycache__",
  ".pytest_cache",
  ".hypothesis",
]
pythonpath = ["backend", "frontend"]
addopts = "--import-mode=importlib --strict-markers --cov-report=term --cov-report=html --cov=backend/loans_analytics --cov=backend/src --cov=frontend/streamlit_app"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint.per-file-ignores]
# Ignore E402 (module level import not at top of file) for Streamlit apps
# These require sys.path modifications before imports
"frontend/streamlit_app/app.py" = ["E402"]
"frontend/streamlit_app/pages/*.py" = ["E402"]
